--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+
+.app-container {
+  /* background-color: #2c3e50; */
+  display: flex;
+  min-height: 100vh;
+}
+
+.main-content {
+  background-color: #ffffff;
+  flex: 1;
+  margin-left: 10px; /* Igual al ancho del sidebar */
+  padding: 20px;
+}
